fixed layout issues on desktop

--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   background: hsl(233, 47%, 7%);
   overflow: hidden;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 h1 {
@@ -35,51 +44,52 @@ p {
 
 #card {
   display: flex;
-  flex: 1;
-  background: hsl(244, 38%, 16%);
   /* top right bottom left */
   margin: 150px 300px 150px 300px;
-  border-radius: 1%;
-  align-items: center;
-  /* width: 600px; */
 }
 
-.left-text {
+#card .left-text {
+  background: hsl(244, 38%, 16%);
+  border-radius: 1%;
   padding-top: 75px;
 }
 
-.stats-white {
+#card .left-text p {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+#card .left-text .stats-white {
   color: hsl(0, 0%, 100%);
   font-size: 20px;
 }
 
 /* Adding color to the Insights span */
-#inner-header-color {
+#card .left-text #inner-header-color {
   color: hsl(277, 64%, 61%);
 }
 
 /* Will display the stats in a row */
-#stats {
+#card .left-text #stats {
   display: flex;
-  margin-bottom: 15px;
 }
 
 /* Overlay color and rounded edges */
-.right-image {
+#card .right-image {
   border-radius: 0 1% 1% 0;
   background-color: hsl(277, 64%, 61%);
   height: 445px;
 }
 
 /* Image styling. Opacity will allow color beneath to show */
-.right-image img {
+#card .right-image img {
   width: 540px;
   opacity: 0.4;
   border-radius: 0px 5px 5px 0px;
 }
 
 /* Mobile Media Queries */
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
   body {
     overflow: scroll;
   }
@@ -90,18 +100,17 @@ p {
     margin: 30px 50px 30px 50px;
     width: 350px;
   }
-  /* why wont this wrap in the card
-  #card p,
+  why wont this wrap in the card #card p,
   h1 {
     display: flex;
     flex-flow: wrap;
-  } */
+  }
 
-  /* .left-text h1,
+  .left-text h1,
   p {
     display: flex;
     flex-wrap: wrap;
-  } */
+  }
 
   .right-image img {
     display: none;
@@ -111,4 +120,4 @@ p {
     width: 350px;
     opacity: 0.4;
   }
-}
+} */
